MCD-315 fix featured products row counting bug. fix some spacing and css issues

--- a/skin/frontend/default/default/css/bootstrap-ms.css
+++ b/skin/frontend/default/default/css/bootstrap-ms.css
@@ -162,6 +162,9 @@ h4 {
 .ms-featured-and-ads .well {
 	padding-top:0px;
 }
+.ms-featured {
+	padding-right: 10px;
+}
 .ms-right-sidebar-image {
 	margin: 0 auto;
 	padding: 0 0 30px 0;
